[gd_scene format=3 uid="uid://ctxdqxo8mr54o"]

[ext_resource type="Script" uid="uid://cpip77fiv4ddh" path="res://game/player/Jonny/Jonny.gd" id="1_fwoqh"]
[ext_resource type="PackedScene" uid="uid://cwdv6wwd2kqyr" path="res://game/player/shot.tscn" id="2_3ep63"]
[ext_resource type="Texture2D" uid="uid://tol1p70mosti" path="res://game/player/Base_Jonny_textures/player_afk1.png" id="2_rbic2"]
[ext_resource type="Texture2D" uid="uid://co5rhyto7mwlq" path="res://game/player/Base_Jonny_textures/player_afk2.png" id="3_n05vw"]
[ext_resource type="Texture2D" uid="uid://dsvcuc46lfosu" path="res://game/player/Base_Jonny_textures/right_go1.png" id="4_8e2hg"]
[ext_resource type="Texture2D" uid="uid://bvoay8dolwrnc" path="res://game/player/Base_Jonny_textures/right_go2.png" id="5_csy6s"]
[ext_resource type="Texture2D" uid="uid://k20b3qao20ha" path="res://game/player/Base_Jonny_textures/down_go1.png" id="6_4p20w"]
[ext_resource type="Texture2D" uid="uid://jmidfr843gt0" path="res://game/player/Base_Jonny_textures/right_go3.png" id="6_xpoel"]
[ext_resource type="Texture2D" uid="uid://x77fd1f2ke1y" path="res://game/player/Base_Jonny_textures/right_go4.png" id="7_16wa1"]
[ext_resource type="Texture2D" uid="uid://c8frxxbb62vbl" path="res://game/player/Base_Jonny_textures/down_go2.png" id="7_mkd23"]
[ext_resource type="Texture2D" uid="uid://b2k113mcpvhte" path="res://game/player/Base_Jonny_textures/top_go1.png" id="12_jfx7g"]
[ext_resource type="Texture2D" uid="uid://robad024noyq" path="res://game/player/Base_Jonny_textures/top_go2.png" id="13_n7ct6"]
[ext_resource type="Texture2D" uid="uid://bmidc6krxal0l" path="res://game/player/Base_Jonny_textures/shot_down.png" id="15_usp30"]
[ext_resource type="Texture2D" uid="uid://bg0r320ov4hsr" path="res://game/player/Base_Jonny_textures/shot_left.png" id="16_0e4oy"]
[ext_resource type="Texture2D" uid="uid://bhhrmf6kbryw3" path="res://game/player/Base_Jonny_textures/shot_rightt.png" id="17_eeltd"]
[ext_resource type="PackedScene" uid="uid://dw14oijigxyr4" path="res://game/interact_tools/InteractingComponents.tscn" id="17_gh012"]
[ext_resource type="Texture2D" uid="uid://cup4rr84336xg" path="res://game/player/Base_Jonny_textures/shot_up.png" id="18_088ty"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g617h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rbic2")
}, {
"duration": 1.0,
"texture": ExtResource("2_rbic2")
}, {
"duration": 1.0,
"texture": ExtResource("2_rbic2")
}, {
"duration": 1.0,
"texture": ExtResource("2_rbic2")
}, {
"duration": 1.0,
"texture": ExtResource("3_n05vw")
}, {
"duration": 1.0,
"texture": ExtResource("3_n05vw")
}, {
"duration": 1.0,
"texture": ExtResource("3_n05vw")
}, {
"duration": 1.0,
"texture": ExtResource("3_n05vw")
}],
"loop": true,
"name": &"afk_default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_4p20w")
}, {
"duration": 1.0,
"texture": ExtResource("7_mkd23")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8e2hg")
}, {
"duration": 1.0,
"texture": ExtResource("5_csy6s")
}, {
"duration": 1.0,
"texture": ExtResource("6_xpoel")
}, {
"duration": 1.0,
"texture": ExtResource("7_16wa1")
}],
"loop": true,
"name": &"walk_h",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_jfx7g")
}, {
"duration": 1.0,
"texture": ExtResource("13_n7ct6")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_epc1c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_usp30")
}],
"loop": false,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_0e4oy")
}],
"loop": false,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_eeltd")
}],
"loop": false,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_088ty")
}],
"loop": false,
"name": &"up",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" unique_id=2016157039 groups=["player"]]
scale = Vector2(1.85, 1.85)
collision_mask = 23
script = ExtResource("1_fwoqh")
shot_scene = ExtResource("2_3ep63")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=222282461]
position = Vector2(0, -1.6216221)
sprite_frames = SubResource("SpriteFrames_g617h")
animation = &"afk_default"

[node name="AnimatedShot" type="AnimatedSprite2D" parent="." unique_id=2140154797]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_epc1c")
animation = &"down"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." unique_id=619690835]
position = Vector2(0, -2.1621618)
polygon = PackedVector2Array(-10, 0, -10, 24, 10, 24, 10, 0)

[node name="immune_Timer" type="Timer" parent="." unique_id=1440095197]
wait_time = 0.3
one_shot = true

[node name="shot_Timer" type="Timer" parent="." unique_id=563273745]
wait_time = 0.4
one_shot = true

[node name="Camera2D" type="Camera2D" parent="." unique_id=409068140]
limit_smoothed = true

[node name="InteractingComponents" parent="." unique_id=2012981929 instance=ExtResource("17_gh012")]
position = Vector2(0, -1.0810814)

[connection signal="timeout" from="immune_Timer" to="." method="_on_immune_timer_timeout"]
[connection signal="timeout" from="shot_Timer" to="." method="_on_shot_timer_timeout"]
